# calendar-planner

./: .coverage  .coveragerc  .gitignore  README.md  pyproject.toml
calendar_planner/: solver.py
tests/: test_solver.py
